# wireguard_flutter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pubspec.yaml
.github/workflows/: ci.yml  release.yml
android/: build.gradle  settings.gradle
android/src/main/kotlin/billion/group/wireguard_flutter/: WireguardFlutterPlugin.kt
darwin/: wireguard_flutter.podspec
darwin/Classes/: WireguardFlutterPlugin.swift
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/network/mysterium/wireguard_dart_example/: MainActivity.kt
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist  Runner.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcworkspace/xcshareddata/swiftpm/: Package.resolved
example/ios/WGExtension/: PacketTunnelProvider.swift  WGExtension.entitlements
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner.xcworkspace/xcshareddata/swiftpm/: Package.resolved
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/WGExtension/: WGExtension.entitlements
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: wireguard_flutter.dart  wireguard_flutter_method_channel.dart  wireguard_flutter_platform_interface.dart
lib/linux/: wireguard_flutter_linux.dart
lib/model/: stats.dart
linux/: CMakeLists.txt  wireguard_dart_plugin.cc  wireguard_flutter_plugin.cc  wireguard_flutter_plugin_private.h
linux/include/wireguard_dart/: wireguard_dart_plugin.h
linux/include/wireguard_flutter/: wireguard_flutter_plugin.h
linux/test/: wireguard_flutter_plugin_test.cc
macos/: wireguard_dart.podspec
macos/Classes/: WireguardDartPlugin.swift
windows/: CMakeLists.txt  config_writer.cpp  config_writer.h  service_control.cpp  service_control.h  utils.cpp  utils.h  wireguard_dart_plugin.cpp  wireguard_dart_plugin.h  wireguard_dart_plugin_c_api.cpp  wireguard_flutter_plugin.cpp  wireguard_flutter_plugin.h  wireguard_flutter_plugin_c_api.cpp
windows/include/wireguard_dart/: wireguard_dart_plugin_c_api.h
windows/include/wireguard_flutter/: wireguard_flutter_plugin_c_api.h
windows/lib/tunnel/amd64/: tunnel.def  tunnel.exp  tunnel.lib
windows/lib/tunnel/arm64/: tunnel.exp  tunnel.lib
windows/lib/tunnel/include/: tunnel.h
windows/lib/wireguard/amd64/: wireguard.exp  wireguard.lib
windows/lib/wireguard/arm64/: wireguard.def  wireguard.exp  wireguard.lib
windows/lib/wireguard/include/: wireguard.h
